# AlgoForge-ML

./: .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  algoforge.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  structure.txt
api/: auth.py  cache.py  database.py  main.py  routes.py  schemas.py
core/: __init__.py  base_model.py  data_loader.py
core/models/: distance.py  linear_models.py  tree_models.py
frontend/: app.py  components.py
tests/: test_api.py  test_core.py  test_models.py
