[project]
name = "algoforge-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "joblib>=1.5.3",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "python-multipart>=0.0.27",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "shap>=0.51.0",
    "streamlit>=1.30.0",
    "uvicorn[standard]>=0.24.0",
]
